[tool.poetry]
name = "kannon"
version = "0.1.0"
description = "Kannon is a wrapper for the gokart library that allows gokart tasks to be easily executed in a distributed and parallel manner on multiple kubernetes jobs."
authors = ["M3, inc."]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m3dev/kannon"
repository = "https://github.com/m3dev/kannon"


[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
gokart = "^1.2.2"
kubernetes = "^26.1.0"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "5.0.4"
tox = "*"
coverage = "*"
isort = "^5.7"
yapf = ">=0.32"
toml = "*"
mypy = "^1.2.0"
pandas-stubs = "^1.5.3.230321"

[tool.flake8]
per-file-ignores = """
  __init__.py: F401
"""
max-line-length = 160
exclude = "venv/*,tox/*"

[tool.yapf]
based_on_style = "pep8"
column_limit = 160

[tool.yapfignore]
ignore_patterns = [
  ".venv/*",
  ".tox/*",
]

[tool.isort]
line_length = 160

[tool.mypy]
strict = true
disallow_subclassing_any = false  # revert strict
implicit_reexport = true  # revert strict
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
